Фикс варнингов